[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bagger-spl"
version = "0.1.0"
description = "Core simulation and gateway scaffolding for the Bagger-SPL platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.5.6",
]
metrics = [
    "prometheus-client>=0.20.0",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
target-version = "py311"
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["spl_core"]

[tool.mypy]
python_version = "3.11"
files = ["python", "services"]
mypy_path = ["python"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
namespace_packages = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.responses", "pydantic", "prometheus_client"]
ignore_missing_imports = true
